--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <h1>Welcome to Recipe Sharing Platform</h1>
         <nav>
             <a href="home.html">Home</a>
-            <a href="app.html">Submit Your Recipe</a>
+            <a href="index.html">Submit Your Recipe</a>
             <a href="about.html">About</a>
         </nav>
     </header>
