home page updated

--- a/home.html
+++ b/home.html
@@ -22,9 +22,73 @@
             <h2>Featured Recipes</h2>
             <p>Discover delicious recipes shared by our community.</p>
             <!-- Add any additional content or features here -->
+
         </section>
     </main>
 
+
+     <!-- Welcome Banner Section -->
+     <section class="welcome-banner">
+        <h2>Discover, Share, and Enjoy Amazing Recipes!</h2>
+        <p>Explore a wide variety of recipes shared by food enthusiasts from around the world.</p>
+    </section>
+
+    <!-- Featured Recipes Section -->
+    <section class="featured-recipes">
+        <h2>Featured Recipes</h2>
+        <div class="recipe-grid">
+            <div class="recipe-card">
+                <img src="spaghetti.jpg" alt="Spaghetti Bolognese">
+                <h3>Spaghetti Bolognese</h3>
+                <p>A classic Italian pasta dish with a rich, flavorful sauce.</p>
+            </div>
+            <div class="recipe-card">
+                <img src="cake.jpg" alt="Chocolate Cake">
+                <h3>Chocolate Cake</h3>
+                <p>Indulge in a moist, rich chocolate cake with a decadent frosting.</p>
+            </div>
+            <!-- Add more featured recipes as needed -->
+        </div>
+    </section>
+
+    <!-- Categories Section -->
+    <section class="recipe-categories">
+        <h2>Explore by Category</h2>
+        <div class="category-links">
+            <a href="#">Appetizers</a>
+            <a href="#">Main Courses</a>
+            <a href="#">Desserts</a>
+            <a href="#">Vegetarian</a>
+            <a href="#">Quick & Easy</a>
+        </div>
+    </section>
+
+    <!-- Popular Recipes Section -->
+    <section class="popular-recipes">
+        <h2>Popular Recipes</h2>
+        <div class="recipe-grid">
+            <div class="recipe-card">
+                <img src="pancakes.jpg" alt="Fluffy Pancakes">
+                <h3>Fluffy Pancakes</h3>
+                <p>These pancakes are light, airy, and perfect for breakfast.</p>
+            </div>
+            <div class="recipe-card">
+                <img src="pizza.jpg" alt="Homemade Pizza">
+                <h3>Homemade Pizza</h3>
+                <p>Create your own pizza with a crispy crust and flavorful toppings.</p>
+            </div>
+            <!-- Add more popular recipes as needed -->
+        </div>
+    </section>
+
+    <!-- Call to Action Section -->
+    <section class="call-to-action">
+        <h2>Got a Recipe to Share?</h2>
+        <p>We love to hear from fellow foodies! Submit your favorite recipe and get featured on our platform.</p>
+        <a href="submit.html" class="cta-button">Submit Your Recipe</a>
+    </section>
+
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Recipe Sharing Platform. All rights reserved.</p>
     </footer>
